# public-exp-upsi

./: ext4-mount.sh
benchmarks/: CMakeLists.txt  adios-reader.cpp  adios-writer.cpp  adios-writer.h  adios2.xml  bench-run.sh  bench-writer-only.sh  calc-nodes-ranks.sh  compare-results.sh  da_per_adios_obj_reader.c  da_per_adios_obj_writer.c  da_per_rank_writer.c  daos-destroy-cont.sh  daos-list-cont.sh  daos-posix-writer.c  daos-reader.c  daos-writer.c  daos_array-reader.c  daos_array-writer-obj-per-rank.c  daos_array-writer.c  daos_array_per_adios_var_reader.c  daos_array_per_adios_var_writer.c  daos_array_per_rank_reader.c  daos_array_per_rank_writer.c  daos_array_reader.c  daos_startup.sh  hello-world.cpp  launch_dfuse.sh  many-run.sh  parse-result.sh  parse-writer-only-result.sh  print-perf.sh  print-writetime.sh  reader.cpp  simple_array.c  singlenode-bench-run.sh  test-config.info  writer.cpp  writer.h
benchmarks/adios-config/: bp4-brigade_type-per-8ranks.xml  bp4-brigade_type-per-node.xml  bp4-brigade_type-per-rank.xml  bp5-everyone_type-per-8ranks.xml  bp5-everyone_type-per-node.xml  bp5-everyone_type-per-rank.xml  bp5-everyoneserial_type-per-node.xml  bp5-twolevelshm-per-8ranks.xml  bp5-twolevelshm-per-rank.xml  bp5-twolevelshm_type-per-node.xml
benchmarks/config/: bp4-sst-min-config.sh  fulltest-config.sh  sst-min-config.sh  workflow-bp4test-config.sh  workflow-daosposixdram-config.sh  workflow-daosposixpmem-config.sh  workflow-exp-config.sh  workflow-fulltest-config.sh  workflow-sst-config.sh  writer-bp4test-config.sh  writer-exp-config.sh  writer-fulltest-config.sh  writer-pmemposix-config.sh
gray-scott/: adios2.xml
